--- a/style.css
+++ b/style.css
@@ -211,3 +211,25 @@ input{
 #checkWindow.active{
     display: block;
 }
+
+.floating{
+    position: absolute;
+    display: block;
+    background: repeating-linear-gradient(45deg, black, black 4px, transparent 4px, transparent 10px);    ;
+    width: 30%;
+    height: 3rem;
+    top: 40%;
+    left: 0;
+    z-index: -1;
+}
+
+.floating::before{
+    content: "";
+    position: absolute;
+    display: block;
+    background: repeating-linear-gradient(45deg, white, white 4px, transparent 4px, transparent 10px);    ;
+    width: 100%;
+    height: 3rem;
+    top: -4px;
+    left: -7px;
+}
