--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ body{
 }
 
 .enterBox{
-    display: flex;
+    /* display: flex; */
     background-color: rgb(255, 255, 50);
     /* background-color: rgb(64, 50, 255); */
     border: 3px solid #000;
@@ -109,7 +109,12 @@ body{
     margin-bottom: 2rem;
 }
 
-input{
+.enterBox div{
+    display: flex;
+    justify-content: center;
+}
+
+.enterBox div input{
     flex: 1;
     outline: none;
     border: none;
